--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -41,7 +41,8 @@ run -b '~/.tmux/plugins/tpm/tpm'
 
 # Visual tweaks
 
-color_background="#2b2d37"
+color_background="#2f3242"
+color_background_light="#333645"
 color_black="colour8"
 color_red="colour1"
 color_red_light="colour9"
@@ -68,8 +69,8 @@ set -g status-justify left
 set -g status-style fg="$color_white",bg="$color_background"
 set -g status-interval 1
 set -g status-position top
-set -g status-left "#[fg=$color_background,bg=$color_magenta_light]#S#[bg=$color_background]#[fg=$color_green] » "
-set -g status-right "#{prefix_highlight} #[fg=$color_blue]${USER}#[fg=$color_black]@#[fg=$color_red]#H #[fg=$color_green]%H:%M"
+set -g status-left "#[bg=$color_background]#[fg=$color_green] "
+set -g status-right "#{prefix_highlight} #[fg=$color_black]session[#[fg=$color_red]#S#[fg=$color_black]] user[#[fg=$color_green]${USER}#[fg=$color_black]] host[#[fg=$color_cyan]#H#[fg=$color_black]] time[#[fg=$color_blue]%H:%M#[fg=$color_black]]"
 set -g status-left-length 200
 set -g status-right-length 200
 
@@ -81,11 +82,11 @@ set -g message-command-style bg=black,fg=blue
 setw -g mode-style bg="$color_red_light",fg="$color_background"
 
 # window status
-setw -g window-status-current-style fg="$color_cyan_light"
-setw -g window-status-current-format "#I#[fg=$color_blue_light]:#[fg=$color_magenta_light]#W#[fg=$color_red_light]#F"
+setw -g window-status-current-style fg="$color_cyan",bg="$color_background_light"
+setw -g window-status-current-format "#[fg=$color_cyan]#I#[fg=$color_black]:#[fg=$color_magenta]#W#[fg=$color_green]#F"
 
-setw -g window-status-style fg="$color_cyan"
-setw -g window-status-format "#I#[fg=$color_blue]:#[fg=$color_black]#W#[fg=$color_magenta]#F"
+setw -g window-status-style fg="$color_black"
+setw -g window-status-format "#I#[fg=$color_black]:#[fg=$color_black]#W#[fg=$color_green]#F"
 
 setw -g window-status-bell-style fg="$color_red_light",bg="$color_black"
 
