Update tmux colors.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -79,7 +79,7 @@ set -g message-style bg="$color_yellow",fg="$color_black"
 set -g message-command-style bg=black,fg=blue
 
 # window mode
-setw -g mode-style bg="$color_red_light",fg="$color_background"
+setw -g mode-style bg="$color_green",fg="$color_background"
 
 # window status
 setw -g window-status-current-style fg="$color_cyan",bg="$color_background_light"
@@ -90,7 +90,7 @@ setw -g window-status-format "#I#[fg=$color_black]:#[fg=$color_black]#W#[fg=$col
 
 setw -g window-status-bell-style fg="$color_red_light",bg="$color_black"
 
-set -g message-style fg="$color_background",bg="$color_magenta",bold
+set -g message-style fg="$color_green",bg="$color_background"
 
 # Plugins setup
 
