Update tmux configuration.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -61,8 +61,8 @@ color_white_light="colour15"
 color_grey="colour250"
 
 # panes
-set -g pane-active-border-style fg="$color_blue"
-set -g pane-border-style fg="$color_grey"
+set -g pane-active-border-style fg="$color_green"
+set -g pane-border-style fg="$color_background"
 
 # status line
 set -g status-justify left
