--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -588,7 +588,7 @@ tab_bar_background none
 #: Color scheme {{{
 
 foreground #abb2bf
-background #2b2d37
+background #2b2d3a
 
 #: The foreground and background colors
 
