--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -3,8 +3,8 @@
     "<C-t>": "normal:t",
     "<C-s>": "normal:s"
   },
-  "signature.enable": false,
-  "suggest.enablePreview": false,
+  "signature.enable": true,
+  "suggest.enablePreview": true,
   "suggest.echodocSupport": true,
   "suggest.floatEnable": true,
   "suggest.timeout":500,
