--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -69,8 +69,8 @@ set -g status-justify left
 set -g status-style fg="$color_white",bg="$color_background"
 set -g status-interval 1
 set -g status-position top
-set -g status-left "#[bg=$color_background]#[fg=$color_green] "
-set -g status-right "#{prefix_highlight} #[fg=$color_black]session[#[fg=$color_red]#S#[fg=$color_black]] user[#[fg=$color_green]${USER}#[fg=$color_black]] host[#[fg=$color_cyan]#H#[fg=$color_black]] time[#[fg=$color_blue]%H:%M#[fg=$color_black]]"
+set -g status-left "#[bg=$color_background]#[fg=$color_blue_light] #S #[bg=$color_background]"
+set -g status-right ""
 set -g status-left-length 200
 set -g status-right-length 200
 
@@ -82,11 +82,11 @@ set -g message-command-style bg=black,fg=blue
 setw -g mode-style bg="$color_green",fg="$color_background"
 
 # window status
-setw -g window-status-current-style fg="$color_cyan",bg="$color_background_light"
-setw -g window-status-current-format "#[fg=$color_cyan]#I#[fg=$color_black]:#[fg=$color_magenta]#W#[fg=$color_green]#F"
+setw -g window-status-current-style bg="$color_blue_light"
+setw -g window-status-current-format " #[fg=$color_background]#W#[fg=$color_black]#F "
 
 setw -g window-status-style fg="$color_black"
-setw -g window-status-format "#I#[fg=$color_black]:#[fg=$color_black]#W#[fg=$color_green]#F"
+setw -g window-status-format "#[fg=$color_blue]#I#[fg=$color_black]:#[fg=$color_black]#W#[fg=$color_green]#F"
 
 setw -g window-status-bell-style fg="$color_red_light",bg="$color_black"
 
