--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -69,7 +69,7 @@ set -g status-justify left
 set -g status-style fg="$color_white",bg="$color_background"
 set -g status-interval 1
 set -g status-position top
-set -g status-left "#[bg=$color_background]#[fg=$color_blue_light] #S #[bg=$color_background]"
+set -g status-left "#[bg=$color_background]#[fg=$color_green] #S #[bg=$color_background]"
 set -g status-right ""
 set -g status-left-length 200
 set -g status-right-length 200
