Beaucoup de plaisir.

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -388,7 +388,7 @@ initial_window_height 620
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-enabled_layouts *
+enabled_layouts splits:split_axis=horizontal,stack
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -592,7 +592,7 @@ background #2b2d3a
 
 #: The foreground and background colors
 
-background_opacity 0.8
+background_opacity 1
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -1040,8 +1040,6 @@ map kitty_mod+h         show_scrollback
 
 #: Window management {{{
 
-map kitty_mod+enter new_window
-
 #: You can open a new window running an arbitrary program, for
 #: example::
 
@@ -1198,7 +1196,7 @@ map kitty_mod+p>n kitten hints --type linenum
 
 #: Miscellaneous {{{
 
-map kitty_mod+f11    toggle_fullscreen
+map kitty_mod+f      toggle_fullscreen
 map kitty_mod+f10    toggle_maximized
 map kitty_mod+u      kitten unicode_input
 map kitty_mod+f2     edit_config_file
@@ -1260,3 +1258,16 @@ map kitty_mod+delete clear_terminal reset active
 #: }}}
 
 # }}}
+map kitty_mod+w>v launch --location=vsplit
+map kitty_mod+w>o launch --location=hsplit
+map kitty_mod+w>r layout_action rotate
+
+map alt+shift+c move_window left
+map alt+shift+r move_window right
+map alt+shift+s move_window up
+map alt+shift+t move_window down
+
+map alt+c neighboring_window left
+map alt+r neighboring_window right
+map alt+s neighboring_window up
+map alt+t neighboring_window down
