--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,11 +6,13 @@ set -g allow-rename on
 set -g set-titles on; set -g set-titles-string "(#h) #T"
 setw -g aggressive-resize on
 set -g mouse on
+tmux_conf_copy_to_os_clipboard=true
 
 # key bindings
 set-window-option -g mode-keys vi
 bind -T prefix q display-panes -d 0
-bind-key    -T prefix w choose-session
+# bind-key    -T prefix w choose-session
+bind-key    -T prefix w run-shell -b "~/.tmux/plugins/tmux-fzf/scripts/session.sh attach"
 bind-key    -T prefix Space new-window
 bind-key    -T prefix c select-pane -L
 bind-key    -T prefix t select-pane -D
@@ -35,6 +37,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+
+set -g @plugin 'sainnhe/tmux-fzf'
+TMUX_FZF_PREVIEW=0
 
 run -b '~/.tmux/plugins/tpm/tpm'
 
