--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,8 +11,8 @@ tmux_conf_copy_to_os_clipboard=true
 # key bindings
 set-window-option -g mode-keys vi
 bind -T prefix q display-panes -d 0
-# bind-key    -T prefix w choose-session
-bind-key    -T prefix w run-shell -b "~/.tmux/plugins/tmux-fzf/scripts/session.sh attach"
+bind-key    -T prefix w choose-session
+# bind-key    -T prefix w run-shell -b "~/.tmux/plugins/tmux-fzf/scripts/session.sh attach"
 bind-key    -T prefix Space new-window
 bind-key    -T prefix c select-pane -L
 bind-key    -T prefix t select-pane -D
