--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -511,7 +511,7 @@ confirm_os_window_close 0
 
 #: Tab bar {{{
 
-tab_bar_edge bottom
+tab_bar_edge top
 
 #: Which edge to show the tab bar on, top or bottom
 
@@ -519,7 +519,7 @@ tab_bar_margin_width 0.0
 
 #: The margin to the left and right of the tab bar (in pts)
 
-tab_bar_style fade
+tab_bar_style separator
 
 #: The tab bar style, can be one of: fade, separator, powerline, or
 #: hidden. In the fade style, each tab's edges fade into the
@@ -527,7 +527,7 @@ tab_bar_style fade
 #: configurable separator, and the powerline shows the tabs as a
 #: continuous line.
 
-tab_bar_min_tabs 2
+tab_bar_min_tabs 1
 
 #: The minimum number of tabs that must exist before the tab bar is
 #: shown
@@ -548,12 +548,12 @@ tab_fade 0.25 0.5 0.75 1
 #: can change the number of cells used by adding/removing entries to
 #: this list.
 
-tab_separator " ┇"
+tab_separator ""
 
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-tab_title_template "{title}"
+tab_title_template " {index}: {title} "
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
@@ -564,21 +564,21 @@ tab_title_template "{title}"
 #: machinery, so you can use, for instance, {layout_name[:2].upper()}
 #: to show only the first two letters of the layout name, upper-cased.
 
-active_tab_title_template none
+active_tab_title_template " {index}: {title} ({layout_name}) "
 
 #: Template to use for active tabs, if not specified falls back to
 #: tab_title_template.
 
 active_tab_foreground   #000
-active_tab_background   #eee
-active_tab_font_style   bold-italic
-inactive_tab_foreground #444
-inactive_tab_background #999
+active_tab_background   #a0c980
+active_tab_font_style   normal
+inactive_tab_foreground #5bb9fc
+inactive_tab_background #2f3242
 inactive_tab_font_style normal
 
 #: Tab bar colors and styles
 
-tab_bar_background none
+tab_bar_background #2f3242
 
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
@@ -592,7 +592,7 @@ background #2b2d3a
 
 #: The foreground and background colors
 
-background_opacity 1
+background_opacity 0.8
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -1092,13 +1092,17 @@ map kitty_mod+0 tenth_window
 
 #: Tab management {{{
 
-map kitty_mod+right next_tab
-map kitty_mod+left  previous_tab
+map kitty_mod+(     previous_tab
+map kitty_mod+)     next_tab
 map kitty_mod+t     new_tab
 map kitty_mod+q     close_tab
 map kitty_mod+.     move_tab_forward
 map kitty_mod+,     move_tab_backward
 map kitty_mod+alt+t set_tab_title
+map alt+"           goto_tab 1
+map alt+2           goto_tab 2
+map alt+3           goto_tab 3
+map alt+(           goto_tab 4
 
 #: You can also create shortcuts to go to specific tabs, with 1 being
 #: the first tab, 2 the second tab and -1 being the previously active
