--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -450,16 +450,16 @@ placement_strategy center
 #: placed centrally. A value of top-left means the padding will be on
 #: only the bottom and right edges.
 
-active_border_color #00ff00
+active_border_color #a0c980
 
 #: The color for the border of the active window. Set this to none to
 #: not draw borders around the active window.
 
-inactive_border_color #cccccc
+inactive_border_color #2f3242
 
 #: The color for the border of inactive windows
 
-bell_border_color #ff5a00
+bell_border_color #fc626b
 
 #: The color for the border of inactive windows in which a bell has
 #: occurred
