--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -564,7 +564,7 @@ tab_title_template " {index}: {title} "
 #: machinery, so you can use, for instance, {layout_name[:2].upper()}
 #: to show only the first two letters of the layout name, upper-cased.
 
-active_tab_title_template " {index}: {title} ({layout_name}) "
+active_tab_title_template " {index}: {title} "
 
 #: Template to use for active tabs, if not specified falls back to
 #: tab_title_template.
@@ -592,7 +592,7 @@ background #2b2d3a
 
 #: The foreground and background colors
 
-background_opacity 0.8
+background_opacity 1.0
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
