--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1092,17 +1092,17 @@ map kitty_mod+0 tenth_window
 
 #: Tab management {{{
 
-map kitty_mod+(     previous_tab
-map kitty_mod+)     next_tab
+map alt+(     previous_tab
+map alt+)     next_tab
 map kitty_mod+t     new_tab
 map kitty_mod+q     close_tab
 map kitty_mod+.     move_tab_forward
 map kitty_mod+,     move_tab_backward
 map kitty_mod+alt+t set_tab_title
-map alt+"           goto_tab 1
-map alt+2           goto_tab 2
-map alt+3           goto_tab 3
-map alt+(           goto_tab 4
+# map alt+"           goto_tab 1
+# map alt+2           goto_tab 2
+# map alt+3           goto_tab 3
+# map alt+(           goto_tab 4
 
 #: You can also create shortcuts to go to specific tabs, with 1 being
 #: the first tab, 2 the second tab and -1 being the previously active
