Beaucoup de plaisir.

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -530,7 +530,7 @@ tab_bar_style separator
 #: configurable separator, and the powerline shows the tabs as a
 #: continuous line.
 
-tab_bar_min_tabs 1
+tab_bar_min_tabs 2
 
 #: The minimum number of tabs that must exist before the tab bar is
 #: shown
@@ -1124,7 +1124,7 @@ map kitty_mod+alt+t set_tab_title
 
 #: Layout management {{{
 
-map kitty_mod+l next_layout
+map alt+l next_layout
 
 #: You can also create shortcuts to switch to specific layouts::
 
