Update with a README and a bunch of doom / git enhancements.

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,8 +3,11 @@
 	name = Dimitri Sabadie
 	signingkey = 23CDFD7CAFBA2EDC
 [alias]
-	slog = log --graph --all --pretty=format:\"%C(yellow)%h%Cblue%d %Creset%s %C(green)%cr%Creset (%C(magenta)%an%Creset)\"
+	graph = log --graph --all --pretty=format:\"%C(yellow)%h%Cblue%d %Creset%s %C(green)%cr%Creset (%C(magenta)%an%Creset)\"
 	fp = fetch --all --prune
+	ll = log --oneline
+	ca = commit --amend
+	ce = commit --amend --no-edit
 [core]
 	pager = less -F -X
 [commit]
@@ -17,3 +20,5 @@
 	user = phaazon
 [rebase]
 	autoSquash = true
+[init]
+	defaultBranch = master
