--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -71,6 +71,7 @@ adjust_column_width 0
 #: times. Syntax is::
 
 #:     symbol_map codepoints Font Family Name
+symbol_map U+f101-U+f208 nonicon
 
 disable_ligatures never
 
