--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -45,7 +45,8 @@ run -b '~/.tmux/plugins/tpm/tpm'
 
 # Visual tweaks
 
-color_background="colour8"
+color_background="#2f3242"
+color_background_light="#333645"
 color_black="colour8"
 color_red="colour1"
 color_red_light="colour9"
@@ -64,7 +65,7 @@ color_white_light="colour15"
 color_grey="colour250"
 
 # panes
-set -g pane-active-border-style fg="$color_blue"
+set -g pane-active-border-style fg="$color_green"
 set -g pane-border-style fg="$color_background"
 
 # status line
@@ -73,7 +74,7 @@ set -g status-style fg="$color_white",bg="$color_background"
 set -g status-interval 1
 set -g status-position top
 set -g status-left "#[bg=$color_background]#[fg=$color_green] #S #[bg=$color_background]"
-set -g status-right ""
+set -g status-right "#(/bin/bash $HOME/code/kube-tmux/kube.tmux 250 red cyan)"
 set -g status-left-length 200
 set -g status-right-length 200
 
@@ -85,9 +86,11 @@ set -g message-command-style bg=black,fg=blue
 setw -g mode-style bg="$color_green",fg="$color_background"
 
 # window status
-setw -g window-status-current-format " #[fg=$color_background]#I:#W#[fg=$color_black]#F "
+setw -g window-status-current-style bg="$color_blue_light"
+setw -g window-status-current-format " #[fg=$color_background]#W#[fg=$color_black]#F "
 
-setw -g window-status-format "#[fg=$color_blue]#I#[fg=$color_grey]:#W#[fg=$color_green]#F"
+setw -g window-status-style fg="$color_black"
+setw -g window-status-format "#[fg=$color_blue]#I#[fg=$color_black]:#[fg=$color_black]#W#[fg=$color_green]#F"
 
 setw -g window-status-bell-style fg="$color_red_light",bg="$color_black"
 
