--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -36,7 +36,6 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
 set -g @plugin 'sainnhe/tmux-fzf'
 TMUX_FZF_PREVIEW=0
@@ -74,7 +73,7 @@ set -g status-style fg="$color_white",bg="$color_background"
 set -g status-interval 1
 set -g status-position top
 set -g status-left "#[bg=$color_background]#[fg=$color_green] #S #[bg=$color_background]"
-set -g status-right "#(/bin/bash $HOME/code/kube-tmux/kube.tmux 250 red cyan)"
+set -g status-right "#[bg=$color_red]#[fg=$color_background]#{prefix_highlight} #(/bin/bash $HOME/code/kube-tmux/kube.tmux 250 red cyan)"
 set -g status-left-length 200
 set -g status-right-length 200
 
