--- a/polybar/config
+++ b/polybar/config
@@ -295,7 +295,7 @@ interval = 5
 date = %a %d %b
 time = %H:%M
 
-format-prefix = 
+format-prefix = " "
 format-prefix-foreground = ${colors.magenta0}
 
 label = " %date%, %time%"
