--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -968,13 +968,12 @@ linux_display_server auto
 
 #:     map ctrl+f>2 set_font_size 20
 
-kitty_mod ctrl+shift
-
 #: The value of kitty_mod is used as the modifier for all default
 #: shortcuts, you can change it in your kitty.conf to change the
 #: modifiers for all the default shortcuts.
 
-clear_all_shortcuts no
+clear_all_shortcuts yes
+kitty_mod ctrl+shift
 
 #: You can have kitty remove all shortcut definition seen up to this
 #: point. Useful, for instance, to remove the default shortcuts.
@@ -1076,8 +1075,8 @@ map kitty_mod+n new_os_window
 #: open a window with the current working directory.
 
 map kitty_mod+w close_window
-map kitty_mod+] next_window
-map kitty_mod+[ previous_window
+# map kitty_mod+] next_window
+# map kitty_mod+[ previous_window
 map kitty_mod+f move_window_forward
 map kitty_mod+b move_window_backward
 map kitty_mod+` move_window_to_top
@@ -1096,8 +1095,8 @@ map kitty_mod+0 tenth_window
 
 #: Tab management {{{
 
-map alt+(     previous_tab
-map alt+)     next_tab
+# map alt+(     previous_tab
+# map alt+)     next_tab
 map kitty_mod+t     new_tab
 map kitty_mod+q     close_tab
 map kitty_mod+.     move_tab_forward
