--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -73,7 +73,7 @@ adjust_column_width 0
 #:     symbol_map codepoints Font Family Name
 # symbol_map U+f101-U+f208 nonicon
 
-disable_ligatures never
+disable_ligatures always
 
 #: Choose how you want to handle multi-character ligatures. The
 #: default is to always render them.  You can tell kitty to not render
