Update Kitty configuration.

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -756,7 +756,7 @@ close_on_child_death no
 #: to yes means that any background processes still using the terminal
 #: can fail silently because their stdout/stderr/stdin no longer work.
 
-allow_remote_control no
+allow_remote_control yes
 
 #: Allow other programs to control kitty. If you turn this on other
 #: programs can control all aspects of kitty, including sending text
@@ -1095,8 +1095,8 @@ map kitty_mod+0 tenth_window
 
 #: Tab management {{{
 
-# map alt+(     previous_tab
-# map alt+)     next_tab
+map alt+p     previous_tab
+map alt+o     next_tab
 map kitty_mod+t     new_tab
 map kitty_mod+q     close_tab
 map kitty_mod+.     move_tab_forward
