--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -11,9 +11,6 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-# TEST FOR EXPERIMENTS
-map kitty_mod+g toggle_tab_bar
-
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
 #: list-fonts` command. By default they are derived automatically, by
@@ -26,7 +23,7 @@ map kitty_mod+g toggle_tab_bar
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 13.0
+font_size 14.0
 
 #: Font size (in pts)
 
@@ -531,7 +528,7 @@ tab_bar_style separator
 #: configurable separator, and the powerline shows the tabs as a
 #: continuous line.
 
-tab_bar_min_tabs 2
+tab_bar_min_tabs 1
 
 #: The minimum number of tabs that must exist before the tab bar is
 #: shown
@@ -552,12 +549,12 @@ tab_fade 0.25 0.5 0.75 1
 #: can change the number of cells used by adding/removing entries to
 #: this list.
 
-tab_separator ""
+tab_separator "┃"
 
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-tab_title_template " {index}: {title} "
+tab_title_template " [{index}] {title} "
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
@@ -568,7 +565,7 @@ tab_title_template " {index}: {title} "
 #: machinery, so you can use, for instance, {layout_name[:2].upper()}
 #: to show only the first two letters of the layout name, upper-cased.
 
-active_tab_title_template " {index}: {title} "
+active_tab_title_template " [{index}]{title} "
 
 #: Template to use for active tabs, if not specified falls back to
 #: tab_title_template.
@@ -1068,44 +1065,65 @@ map kitty_mod+h         show_scrollback
 
 #: For more details, see launch.
 
-map kitty_mod+n new_os_window
+#map kitty_mod+n new_os_window
 
 #: Works like new_window above, except that it opens a top level OS
 #: kitty window. In particular you can use new_os_window_with_cwd to
 #: open a window with the current working directory.
 
-map kitty_mod+w close_window
+map alt+shift+c move_window left
+map alt+shift+r move_window right
+map alt+shift+s move_window up
+map alt+shift+t move_window down
+
+map alt+c neighboring_window left
+map alt+r neighboring_window right
+map alt+s neighboring_window up
+map alt+t neighboring_window down
+
 # map kitty_mod+] next_window
 # map kitty_mod+[ previous_window
-map kitty_mod+f move_window_forward
-map kitty_mod+b move_window_backward
-map kitty_mod+` move_window_to_top
-map kitty_mod+r start_resizing_window
-map kitty_mod+1 first_window
-map kitty_mod+2 second_window
-map kitty_mod+3 third_window
-map kitty_mod+4 fourth_window
-map kitty_mod+5 fifth_window
-map kitty_mod+6 sixth_window
-map kitty_mod+7 seventh_window
-map kitty_mod+8 eighth_window
-map kitty_mod+9 ninth_window
-map kitty_mod+0 tenth_window
+map kitty_mod+w>v launch --location=vsplit
+map kitty_mod+w>o launch --location=hsplit
+map kitty_mod+w>r layout_action rotate
+map kitty_mod+w>q close_window
+map kitty_mod+w>f move_window_forward
+map kitty_mod+w>b move_window_backward
+map kitty_mod+w>` move_window_to_top
+map kitty_mod+w>r start_resizing_window
+# map kitty_mod+1 first_window
+# map kitty_mod+2 second_window
+# map kitty_mod+3 third_window
+# map kitty_mod+4 fourth_window
+# map kitty_mod+5 fifth_window
+# map kitty_mod+6 sixth_window
+# map kitty_mod+7 seventh_window
+# map kitty_mod+8 eighth_window
+# map kitty_mod+9 ninth_window
+# map kitty_mod+0 tenth_window
 #: }}}
 
 #: Tab management {{{
 
-map alt+p     previous_tab
-map alt+o     next_tab
-map kitty_mod+t     new_tab
-map kitty_mod+q     close_tab
-map kitty_mod+.     move_tab_forward
-map kitty_mod+,     move_tab_backward
-map kitty_mod+alt+t set_tab_title
-# map alt+"           goto_tab 1
-# map alt+2           goto_tab 2
-# map alt+3           goto_tab 3
-# map alt+(           goto_tab 4
+map kitty_mod+t>c  previous_tab
+map kitty_mod+t>r  next_tab
+map kitty_mod+t>n  new_tab
+map kitty_mod+t>q  close_tab
+map kitty_mod+t>f  move_tab_forward
+map kitty_mod+t>b  move_tab_backward
+map kitty_mod+t>t  set_tab_title
+map kitty_mod+t>"  goto_tab 1
+map kitty_mod+t>«  goto_tab 2
+map kitty_mod+t>»  goto_tab 3
+map kitty_mod+t>(  goto_tab 4
+map kitty_mod+t>)  goto_tab 5
+map kitty_mod+t>@  goto_tab 6
+map kitty_mod+t>+  goto_tab 7
+map kitty_mod+t>-  goto_tab 8
+map kitty_mod+t>/  goto_tab 9
+map kitty_mod+t>*  goto_tab 10
+map kitty_mod+t>=  goto_tab 11
+map kitty_mod+t>%  goto_tab 12
 
 #: You can also create shortcuts to go to specific tabs, with 1 being
 #: the first tab, 2 the second tab and -1 being the previously active
@@ -1124,7 +1142,9 @@ map kitty_mod+alt+t set_tab_title
 
 #: Layout management {{{
 
-map alt+l next_layout
+map kitty_mod+l>n next_layout
+map kitty_mod+l>l goto_layout splits:split_axis=horizontal
+map kitty_mod+l>f goto_layout stack
 
 #: You can also create shortcuts to switch to specific layouts::
 
@@ -1265,16 +1285,3 @@ map kitty_mod+delete clear_terminal reset active
 #: }}}
 
 # }}}
-map kitty_mod+w>v launch --location=vsplit
-map kitty_mod+w>o launch --location=hsplit
-map kitty_mod+w>r layout_action rotate
-
-map alt+shift+c move_window left
-map alt+shift+r move_window right
-map alt+shift+s move_window up
-map alt+shift+t move_window down
-
-map alt+c neighboring_window left
-map alt+r neighboring_window right
-map alt+s neighboring_window up
-map alt+t neighboring_window down
