--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -549,7 +549,7 @@ tab_fade 0.25 0.5 0.75 1
 #: can change the number of cells used by adding/removing entries to
 #: this list.
 
-tab_separator "┃"
+tab_separator ""
 
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
