Kityt and lsp config.

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -798,7 +798,7 @@ update_check_interval 24
 #: available update. The default is to check every 24 hrs, set to zero
 #: to disable.
 
-startup_session none
+# startup_session ~/.local/share/kitty/sessions/home.session
 
 #: Path to a session file to use for all kitty instances. Can be
 #: overridden by using the kitty --session command line option for
@@ -1105,25 +1105,25 @@ map kitty_mod+w>r start_resizing_window
 
 #: Tab management {{{
 
-map kitty_mod+t>c  previous_tab
-map kitty_mod+t>r  next_tab
-map kitty_mod+t>n  new_tab
-map kitty_mod+t>q  close_tab
-map kitty_mod+t>f  move_tab_forward
-map kitty_mod+t>b  move_tab_backward
-map kitty_mod+t>t  set_tab_title
-map kitty_mod+t>"  goto_tab 1
-map kitty_mod+t>«  goto_tab 2
-map kitty_mod+t>»  goto_tab 3
-map kitty_mod+t>(  goto_tab 4
-map kitty_mod+t>)  goto_tab 5
-map kitty_mod+t>@  goto_tab 6
-map kitty_mod+t>+  goto_tab 7
-map kitty_mod+t>-  goto_tab 8
-map kitty_mod+t>/  goto_tab 9
-map kitty_mod+t>*  goto_tab 10
-map kitty_mod+t>=  goto_tab 11
-map kitty_mod+t>%  goto_tab 12
+map kitty_mod+t>c previous_tab
+map kitty_mod+t>r next_tab
+map kitty_mod+t>n new_tab
+map kitty_mod+t>q close_tab
+map kitty_mod+t>f move_tab_forward
+map kitty_mod+t>b move_tab_backward
+map kitty_mod+t>t set_tab_title
+map kitty_mod+t>" goto_tab 1
+map kitty_mod+t>« goto_tab 2
+map kitty_mod+t>» goto_tab 3
+map kitty_mod+t>( goto_tab 4
+map kitty_mod+t>) goto_tab 5
+map kitty_mod+t>@ goto_tab 6
+map kitty_mod+t>+ goto_tab 7
+map kitty_mod+t>- goto_tab 8
+map kitty_mod+t>/ goto_tab 9
+map kitty_mod+t>* goto_tab 10
+map kitty_mod+t>= goto_tab 11
+map kitty_mod+t>% goto_tab 12
 
 #: You can also create shortcuts to go to specific tabs, with 1 being
 #: the first tab, 2 the second tab and -1 being the previously active
