--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ archlinux/.config/nvim/plugged
 archlinux/.config/nvim/platform-specific.vim
 archlinux/.config/polybar/github_token
 /nvim/plugin
+/nvim/sessions
