Add gc-branches and new-branches scripts.

--- a/fzf/.fzfrc
+++ b/fzf/.fzfrc
@@ -1,12 +1,11 @@
-source /usr/share/fzf/completion.zsh
-source /usr/share/fzf/key-bindings.zsh
+export FZF_DEFAULT_COMMAND='rg --files --follow'
 
-export FZF_DEFAULT_OPTS="
-  --height 40%
+export FZF_DEFAULT_OPTS='
   -m
+  --height 40%
   --reverse
   --info=inline
-  "
+  '
 
 export FZF_CTRL_T_OPTS='--border --height 40'
-export FZF_CTRL_R_OPTS='--border --height 20'
+export FZF_CTRL_R_OPTS='--border --height 40 --preview='
